--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <meta name='viewport'
         content='user-scalable=no,initial-scale=1,minimum-scale=1,width=device-width,height=device-height,viewport-fit=cover'>
     <link rel='stylesheet' type='text/css' href='css/style.min.css'>
+    <link rel="canonical" href="https://darkreaper231.github.io/Incredibox/" />
+    <link rel="icon" href="https://raw.githubusercontent.com/DarkReaper231/Incredibox/main/img/favicon.ico" />
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://darkreaper231.github.io/Incredibox/">
+    <meta property="og:title" content="Incredibox">
+    <meta property="og:description" content="pirate version of Incredibox by DarkReaper">
+    <meta property="og:image" content="https://raw.githubusercontent.com/DarkReaper231/Incredibox/main/img/og-logo.png">
+    <meta data-react-helmet="true" name="theme-color" content="#ffffff">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="darkreaper231.github.io">
+    <meta property="twitter:url" content="https://darkreaper231.github.io/Incredibox/">
+    <meta property="twitter:title" content="Incredibox">
+    <meta property="twitter:description" content="pirate version of Incredibox by DarkReaper">
+    <meta property="twitter:image" content="https://raw.githubusercontent.com/DarkReaper231/Incredibox/main/img/og-logo.png">
 </head>
 
 <body>
